Adjusted logo on top bar to avoid overlapping with text

--- a/htdocs/css/master.css
+++ b/htdocs/css/master.css
@@ -45,7 +45,7 @@ div#header {
 div#logo {
     position: absolute;
     left: 0px;
-    top: 10px;
+    top: 6px;
     display:block;
     width:49%;
     padding:0;
